--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -59,7 +59,7 @@
             </div>
         </div>
         <hr/>
-        <div class="row">
+        <div class="row copyright">
             <div class="col-md-8">
                 ©2020 All Rights Reserved. Grupo DgFarm C.A. Privacy and Terms
             </div>
