--- a/src/views/forgotPassword.ejs
+++ b/src/views/forgotPassword.ejs
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="gray-bg">
+<body class="white-bg">
 
     <div class="passwordBox animated fadeInDown">
         <div class="row">
@@ -45,7 +45,7 @@
                                     >
                                 </div>
 
-                                <button type="submit" class="btn btn-primary block full-width m-b">Enviar nueva contraseña</button>
+                                <button type="submit" class="btn btn-color block full-width m-b">Enviar nueva contraseña</button>
 
                             </form>
                         </div>
