--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -48,7 +48,7 @@
                                 required
                             >
                         </div>
-                        <button type="submit" class="btn btn-color block full-width m-b ">INGRESAR</button>
+                        <button type="submit" class="btn btn-primary block full-width m-b ">INGRESAR</button>
 
                         <a class="link-forgot-password" href="/sistema/forgot-password">
                             <small>¿OLVIDÓ SU CLAVE?</small>
