--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -12,6 +12,9 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/font-awesome/css/font-awesome.css" rel="stylesheet">
 
+    <!-- DataTables style -->
+    <link href="/css/plugins/dataTables/datatables.min.css" rel="stylesheet">
+
     <!-- Toastr style -->
     <link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet">
 
@@ -47,7 +50,7 @@
                             <img alt="image" class="logo-element-img" src="/img/ISOTIPO_VBLANCO_ATINA.png"/>
                         </div>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="index-2.html"><i class="fa fa-edit"></i> <span class="nav-label">Datos</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="index-2.html">Dashboard v.1</a></li>
@@ -56,8 +59,8 @@
                             <li><a href="dashboard_4_1.html">Dashboard v.4</a></li>
                             <li><a href="dashboard_5.html">Dashboard v.5 </a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="index-2.html"><i class="fa fa-group"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="index-2.html">Dashboard v.1</a></li>
@@ -66,8 +69,8 @@
                             <li><a href="dashboard_4_1.html">Dashboard v.4</a></li>
                             <li><a href="dashboard_5.html">Dashboard v.5 </a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="#"><i class="fa fa-window-restore"></i> <span class="nav-label">Pólizas</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="graph_flot.html">Flot Charts</a></li>
@@ -79,8 +82,8 @@
                             <li><a href="graph_peity.html">Peity Charts</a></li>
                             <li><a href="graph_sparkline.html">Sparkline Charts</a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="mailbox.html"><i class="fa fa-exclamation-triangle"></i> <span class="nav-label">Siniestro</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="mailbox.html">Inbox</a></li>
@@ -88,8 +91,8 @@
                             <li><a href="mail_compose.html">Compose email</a></li>
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="mailbox.html"><i class="fa fa-lock"></i> <span class="nav-label">Campaña</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="mailbox.html">Inbox</a></li>
@@ -97,8 +100,8 @@
                             <li><a href="mail_compose.html">Compose email</a></li>
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="mailbox.html"><i class="fa fa-file-text"></i> <span class="nav-label">Factura</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="mailbox.html">Inbox</a></li>
@@ -106,8 +109,8 @@
                             <li><a href="mail_compose.html">Compose email</a></li>
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="#"><i class="fa fa-dollar"></i> <span class="nav-label">Bonos</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="form_basic.html">Basic form</a></li>
@@ -118,8 +121,8 @@
                             <li><a href="form_autocomplete.html">Autocomplete</a></li>
                             <li><a href="form_markdown.html">Markdown</a></li>
                         </ul>
-                    </li>
-                    <li>
+                    </li-->
+                    <!--li>
                         <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Gestión de Cobranza</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="form_basic.html">Basic form</a></li>
@@ -130,16 +133,16 @@
                             <li><a href="form_autocomplete.html">Autocomplete</a></li>
                             <li><a href="form_markdown.html">Markdown</a></li>
                         </ul>
-                    </li>
+                    </li-->
                     <li>
                         <a href="#"><i class="fa fa-user-circle-o"></i> <span class="nav-label">Gestión de Usuarios</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="/sistema/user-management">Agregar</a></li>
-                            <li><a href="lockscreen.html">Consultar</a></li>
-                            <li><a href="invoice.html">Roles</a></li>
+                            <li><a href="/sistema/users">Consultar Usuarios</a></li>
+                            <li><a href="/sistema/user-management">Agregar Usuarios</a></li>
+                            <li><a href="/sistema/roles">Consultar Roles</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="#"><i class="fa fa-info-circle"></i> <span class="nav-label">Ayuda</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="typography.html">Typography</a></li>
@@ -153,7 +156,7 @@
                             <li><a href="helper_classes.html">Helper css classes</a></li>
                             <li><a href="badges_labels.html">Badges, Labels, Progress</a></li>
                         </ul>
-                    </li>
+                    </li-->
                 </ul>
             </div>
         </nav>
