--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -52,6 +52,10 @@
     <!-- Toastr -->
     <script src="/js/plugins/toastr/toastr.min.js"></script>
 
+    <!-- DataTables -->
+    <script src="/js/plugins/dataTables/datatables.min.js"></script>
+    <script src="/js/plugins/dataTables/dataTables.bootstrap4.min.js"></script>
+
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <% if(typeof alert != 'undefined') { %>
